chore: 完善 VS Code 开发环境配置
- 添加 VS Code 推荐插件列表
- 创建工作区设置，配置自动格式化和 ESLint 修复
- 完善 Prettier 配置规则
- 统一代码缩进为 2 个空格
- 优化 TypeScript 和 Tailwind CSS 开发体验

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,10 @@
 {
   "recommendations": [
-    "nrwl.angular-console",
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "ms-vscode.typescript-language-features",
+    "bradlc.vscode-tailwindcss",
+    "formulahendry.auto-rename-tag",
+    "christian-kohler.path-intellisense"
   ]
 }
