chore: 更新VS Code设置和删除文档
- 在VS Code设置中添加了nxConsole.generateAiAgentRules配置
- 添加 Nx MCP
- 清理了不再需要的技术栈分析文档

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
   "tailwindCSS.includeLanguages": {
     "typescript": "javascript", // 在 TypeScript 文件中启用 Tailwind CSS 智能提示
     "typescriptreact": "javascript" // 在 TSX 文件中启用 Tailwind CSS 智能提示
-  }
+  },
+  "nxConsole.generateAiAgentRules": true
 }
