feat: 集成 Next.js 和更新项目结构
- 添加 Next.js 15 和相关依赖
- 更新 ESLint 配置以支持 Next.js 规则
- 创建 Next.js 应用的基本结构和配置
- 删除不再需要的 Vite 配置和相关文件
- 更新 README 文档以反映新的项目结构和使用说明

--- a/apps/prism/package.json
+++ b/apps/prism/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@./prism",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
+  }
 }
