--- a/apps/prism/tsconfig.app.json
+++ b/apps/prism/tsconfig.app.json
@@ -3,15 +3,15 @@
   "compilerOptions": {
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "lib": ["dom"],
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts",
-      "vite/client"
-    ],
-    "rootDir": "src"
+      "next",
+      "next/image-types/global"
+    ]
   },
   "exclude": [
     "out-tsc",
@@ -28,5 +28,5 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
 }
