--- a/nx.json
+++ b/nx.json
@@ -57,7 +57,8 @@
         "buildDepsTargetName": "build-deps",
         "watchDepsTargetName": "watch-deps"
       }
-    }
+    },
+    "@nx/next/plugin"
   ],
   "generators": {
     "@nx/react": {
