--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "eslint-config-next": "^15.5.2",
+    "next": "^15.5.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
@@ -21,9 +23,11 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
+    "@next/eslint-plugin-next": "^15.5.2",
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
     "@nx/js": "21.3.11",
+    "@nx/next": "21.3.11",
     "@nx/react": "21.3.11",
     "@nx/vite": "21.3.11",
     "@nx/web": "21.3.11",
