--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,11 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
-    "ms-vscode.typescript-language-features",
     "bradlc.vscode-tailwindcss",
+    "dbaeumer.vscode-eslint",
+    "nrwl.angular-console",
+    "esbenp.prettier-vscode",
+    "csstools.postcss",
+    "ms-vscode.typescript-language-features",
     "formulahendry.auto-rename-tag",
     "christian-kohler.path-intellisense"
   ]
