--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
       "path": "cz-conventional-changelog"
     }
   },
+  "engines": {
+    "node": ">=20.11.0 <21",
+    "pnpm": ">=9.12.0 <10"
+  },
+  "volta": {
+    "node": "20.11.1",
+    "pnpm": "9.12.0"
+  },
   "private": true,
   "dependencies": {
-    "eslint-config-next": "^15.5.2",
-    "next": "^15.5.2",
+    "eslint-config-next": "15.5.2",
+    "next": "15.5.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router-dom": "6.29.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
