chore: 对齐 Nx 框架配置

--- a/apps/prism/tsconfig.json
+++ b/apps/prism/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "files": [],
-  "include": [".next/types/**/*.ts"],
+  "include": [
+    ".next/types/**/*.ts",
+    "../../dist/apps/prism/.next/types/**/*.ts"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
@@ -20,5 +23,7 @@
       }
     ]
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
