--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "prepare": "husky",
     "commit": "git-cz",
+    "lint-staged": "lint-staged",
     "dev": "nx dev prism",
     "build": "nx build prism",
     "start": "nx start prism",
@@ -66,6 +67,7 @@
     "husky": "^9.1.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "lint-staged": "^16.2.7",
     "nx": "21.3.11",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -75,5 +77,14 @@
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "pnpm exec eslint --fix",
+      "pnpm exec prettier --write"
+    ],
+    "*.{md,json,yml,yaml,css,scss,html}": [
+      "pnpm exec prettier --write"
+    ]
   }
 }
