chore: 添加 CI 工作流和更新项目文档
- 新增 GitHub Actions CI 工作流，自动执行 lint、test 和 typecheck
- 更新 README 文档，说明 CI 质量门槛
- 在 nx.json 中定义 targetDefaults 以优化构建和测试流程
- 创建计划文档，列出 Prism 框架建设任务清单

--- a/nx.json
+++ b/nx.json
@@ -12,6 +12,23 @@
     ],
     "sharedGlobals": []
   },
+  "targetDefaults": {
+    "build": {
+      "inputs": ["production", "^production"],
+      "dependsOn": ["^build"]
+    },
+    "lint": {
+      "inputs": ["default", "^default"]
+    },
+    "test": {
+      "inputs": ["default", "^default"],
+      "dependsOn": ["^test"]
+    },
+    "typecheck": {
+      "inputs": ["default", "^default"],
+      "dependsOn": ["^typecheck"]
+    }
+  },
   "plugins": [
     {
       "plugin": "@nx/js/typescript",
