chore: 更新测试配置和文档
- 在 nx.json 中更新测试任务依赖，确保测试在构建后执行
- 在 package.json 中添加 @vitest/coverage-v8 依赖以支持代码覆盖率
- 更新 README 文档，添加 Vitest 测试说明
- 修改 prism 项目的测试配置，确保测试输出目录和配置文件路径正确
- 更新 tsconfig 文件以包含 Vitest 配置文件

--- a/apps/prism/project.json
+++ b/apps/prism/project.json
@@ -36,7 +36,9 @@
     "test": {
       "executor": "@nx/vite:test",
       "options": {
-        "passWithNoTests": true
+        "passWithNoTests": false,
+        "config": "apps/prism/vite.config.ts",
+        "reportsDirectory": "apps/prism/test-output/vitest"
       }
     },
     "typecheck": {
