--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
     "commitizen": "^4.3.1",
