--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-config-next": "15.5.2",
     "next": "15.5.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
