feat: 集成 Playwright 进行端到端测试
- 在 nx.json 中添加 e2e 测试任务，配置 Playwright
- 创建 Playwright 配置文件，设置测试环境和浏览器
- 更新 README 文档，添加 Playwright 测试说明
- 引入 observability 组件，支持日志记录和性能指标
- 更新应用页面和组件，增强用户体验和可测试性
- 添加示例端到端测试，验证应用的基本功能

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "csstools.postcss",
     "ms-vscode.typescript-language-features",
     "formulahendry.auto-rename-tag",
-    "christian-kohler.path-intellisense"
+    "christian-kohler.path-intellisense",
+    "ms-playwright.playwright"
   ]
 }
