--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nx start prism",
     "lint": "nx lint prism",
     "test": "nx test prism",
-    "typecheck": "nx run prism:typecheck"
+    "typecheck": "nx run prism:typecheck",
+    "e2e": "nx run prism:e2e"
   },
   "config": {
     "commitizen": {
@@ -39,18 +40,24 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^15.5.2",
+    "@nx/devkit": "22.1.2",
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
     "@nx/js": "21.3.11",
     "@nx/next": "21.3.11",
+    "@nx/playwright": "^22.1.2",
     "@nx/react": "21.3.11",
     "@nx/vite": "21.3.11",
     "@nx/web": "21.3.11",
     "@nx/workspace": "21.3.11",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
