--- a/apps/prism/tsconfig.json
+++ b/apps/prism/tsconfig.json
@@ -10,6 +10,12 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./tsconfig.e2e.json"
+    },
+    {
+      "path": "./tsconfig.e2e.json"
     }
   ],
   "extends": "../../tsconfig.base.json",
