--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     }
   },
   "engines": {
-    "node": ">=20.11.0 <21",
+    "node": ">=20.11.0",
     "pnpm": ">=9.12.0 <10"
   },
   "volta": {
-    "node": "20.11.1",
+    "node": "24.11.1",
     "pnpm": "9.12.0"
   },
   "private": true,
