--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^15.5.2",
-    "@nx/devkit": "22.1.2",
+    "@nx/devkit": "21.3.11",
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
     "@nx/js": "21.3.11",
     "@nx/next": "21.3.11",
-    "@nx/playwright": "^22.1.2",
+    "@nx/playwright": "21.3.11",
     "@nx/react": "21.3.11",
     "@nx/vite": "21.3.11",
     "@nx/web": "21.3.11",
