feat: 更新 Header 组件和类型定义

--- a/apps/prism/tsconfig.app.json
+++ b/apps/prism/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "jsx": "preserve",
-    "lib": ["dom"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
