fix: 生产环境配置

--- a/apps/prism/.env.local
+++ b/apps/prism/.env.local
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_API_URL=http://192.168.50.244:1337
+# 本地开发环境配置
+# 注意：此文件优先级高于 .env.production
+# 生产环境请使用 .env.production 或在构建时设置环境变量
+# NEXT_PUBLIC_API_URL=http://192.168.50.244:1337
