feat: 添加UI库、优化交互UI

--- a/apps/prism/tsconfig.app.json
+++ b/apps/prism/tsconfig.app.json
@@ -5,6 +5,10 @@
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
