--- a/apps/prism/tsconfig.json
+++ b/apps/prism/tsconfig.json
@@ -26,6 +26,10 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "plugins": [
       {
         "name": "next"
