--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
   },
   "private": true,
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint-config-next": "15.5.2",
+    "lucide-react": "^0.561.0",
     "next": "15.5.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
