--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
   },
   "private": true,
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "15.5.7",
     "lucide-react": "^0.561.0",
-    "next": "15.5.2",
+    "next": "15.5.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.4.0",
@@ -44,7 +47,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
-    "@next/eslint-plugin-next": "^15.5.2",
+    "@next/eslint-plugin-next": "^15.5.7",
     "@nx/devkit": "21.3.11",
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
