chore: 优化 Next.js 部署配置和端口设置

--- a/apps/prism/project.json
+++ b/apps/prism/project.json
@@ -24,6 +24,7 @@
       "executor": "@nx/next:server",
       "options": {
         "buildTarget": "prism:build",
+        "port": 3002,
         "dev": false
       }
     },
