--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ Thumbs.db
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
 test-output
+
+# Environment files
+.env*.local
+.env.production
+
+# Deployment scripts
+ecosystem.config.js
