--- a/apps/prism/package.json
+++ b/apps/prism/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4"
+    "@radix-ui/react-slot": "^1.2.4",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0"
   }
 }
