--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "pnpm exec eslint --fix",
+      "pnpm exec eslint --fix --ignore-pattern '*.config.ts' --ignore-pattern '*.config.js'",
       "pnpm exec prettier --write"
     ],
     "*.{md,json,yml,yaml,css,scss,html}": [
