feat: 添加按需重新验证支持，并跨博客和食谱页面更新重新验证时间

--- a/apps/prism/.env.example
+++ b/apps/prism/.env.example
@@ -69,3 +69,8 @@ NODE_ENV=development
 #   ⚠️ 使用 .env.local 存储（已添加到 .gitignore）
 #   ✅ 只在服务端使用，不会暴露到客户端
 # STRAPI_API_TOKEN=your_secret_token_here
+
+# Next.js On-Demand Revalidation Secret
+# 用途：Strapi Webhook 调用 /api/revalidate 时的鉴权
+# 建议每个环境单独设置随机值，并通过 Header X-Revalidate-Secret 或 query/body secret 传递
+# REVALIDATE_SECRET=your_revalidate_secret_here
